@@ -1,3 +1,4 @@
+- do not try to configure dvd devices since /dev is wiped out at reboot
 - allow umounting cdrom during a transaction
 - really allow having name with "/" in media.cfg
 
